src/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package parser;

import java.math.BigInteger;
import java.util.ArrayList;
import java.io.PrintStream;

import parser.tree.*;
import parser.tree.expression.*;
import parser.tree.expression.literals.*;
import parser.tree.expression.operators.*;
import parser.tree.expression.operators.binary.*;
import parser.tree.statement.*;
import parser.tree.types.*;

public class Parser implements ParserConstants {
        private Program p;
        public static PrintStream out = System.out; // default

  public void Parse() throws ParseException
  {
                p = this.Program();
  }

  public void printTree()
  {
        p.print("", true);
  }

  public Node getRoot()
  {
        return p;
  }

/********************************
 * MINIJAVA GRAMMAR STARTS HERE *
 ********************************/

/* Top level production */
  final public Program Program() throws ParseException {
  MainClass mc;
  ArrayList<ClassDecl> cdl;
  ClassDecl c;
    /* The first class must be the main class */
            mc = MainClass();
    /* Then zero or more other class declarations */
            cdl = ClassDeclList();
    jj_consume_token(0);
          {if (true) return new Program(mc, cdl);}
    throw new Error("Missing return statement in function");
  }

  final public MainClass MainClass() throws ParseException {
  Id id; ArrayList<VarDecl> vars; ArrayList<Stmt> stmts;
    jj_consume_token(CLASS);
    id = Id();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    Id();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    vars = Vars();
    stmts = Stmts();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
    {if (true) return new MainClass(id, vars, stmts);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<ClassDecl> ClassDeclList() throws ParseException {
  ArrayList<ClassDecl> cdl = new ArrayList<ClassDecl>(); ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                           cdl.add(c);
    }
          {if (true) return cdl.size() > 0 ? cdl : null;}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDecl() throws ParseException {
  Id id; ClassBody cb;
    jj_consume_token(CLASS);
    id = Id();
    jj_consume_token(LBRACE);
    cb = ClassBody();
    jj_consume_token(RBRACE);
    {if (true) return new ClassDecl(id, cb);}
    throw new Error("Missing return statement in function");
  }

/* Class Body */
  final public ClassBody ClassBody() throws ParseException {
  ArrayList<VarDecl> vdl; ArrayList<MethodDecl> mdl;
    vdl = VarDeclList();
    mdl = MethodDeclList();
    {if (true) return (vdl == null) && (mdl == null) ? null : new ClassBody(vdl, mdl);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<VarDecl> VarDeclList() throws ParseException {
  ArrayList<VarDecl> vdl = new ArrayList<VarDecl>(); VarDecl v;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case MAIN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      v = VarDecl();
                   vdl.add(v);
    }
    {if (true) return vdl.size() > 0 ? vdl : null;}
    throw new Error("Missing return statement in function");
  }

/* Variable declaration */
  final public VarDecl VarDecl() throws ParseException {
  Type type; Id id;
    type = Type();
    id = Id();
    jj_consume_token(SEMICOLON);
          {if (true) return new VarDecl(type, id);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<MethodDecl> MethodDeclList() throws ParseException {
  ArrayList<MethodDecl> mdl = new ArrayList<MethodDecl>(); MethodDecl m;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      m = MethodDecl();
                      mdl.add(m);
    }
    {if (true) return mdl.size() > 0 ? mdl : null;}
    throw new Error("Missing return statement in function");
  }

/* Method declaration */
  final public MethodDecl MethodDecl() throws ParseException {
 Type returnType; Id id; ArrayList<Formal> fl; ArrayList<VarDecl> vars; ArrayList<Stmt> stmts; Return returnStmt;
    jj_consume_token(PUBLIC);
    returnType = Type();
    id = Id();
    jj_consume_token(LPAREN);
    fl = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    vars = Vars();
    stmts = Stmts();
         Expr e;
    jj_consume_token(RETURN);
                                int returnLine = token.beginLine;
    e = Expr();
    jj_consume_token(SEMICOLON);
                                                                                             returnStmt = new Return(e); returnStmt.line = returnLine;
    jj_consume_token(RBRACE);
    {if (true) return new MethodDecl(returnType, id, fl, vars, stmts, returnStmt);}
    throw new Error("Missing return statement in function");
  }

/* Formal list */
  final public ArrayList<Formal> FormalList() throws ParseException {
  ArrayList<Formal> fl = new ArrayList<Formal>();
  Formal f;
  Type t;
  Id id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case MAIN:
    case IDENTIFIER:
      t = Type();
      id = Id();
                           f = new Formal(t,id); fl.add(f);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_4;
        }
        f = FormalRest();
                          fl.add(f);
      }
          {if (true) return fl;}
      break;
    default:
      jj_la1[4] = jj_gen;
    {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<VarDecl> Vars() throws ParseException {
  ArrayList<VarDecl> vars = new ArrayList<VarDecl>();
  VarDecl v;
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      v = VarDecl();
                             vars.add(v);
    }
   {if (true) return vars.size() > 0 ? vars : null;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Stmt> Stmts() throws ParseException {
  ArrayList<Stmt> stmts = new ArrayList<Stmt>();
  Stmt s;
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case PRINT:
      case MAIN:
      case LBRACE:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
      s = Stmt();
             stmts.add(s);
    }
   {if (true) return stmts.size() > 0 ? stmts : null;}
    throw new Error("Missing return statement in function");
  }

  final public Formal FormalRest() throws ParseException {
  Formal f;
  Type t;
  Id id;
    jj_consume_token(COMMA);
    t = Type();
    id = Id();
                               f = new Formal(t,id);
    {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

/* Identifier rule, may come up with something better ... */
  final public Id Id() throws ParseException {
  String tokenstr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
                         tokenstr = token.toString() ;
      break;
    case MAIN:
      jj_consume_token(MAIN);
                                                                     tokenstr = "main";
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return new Id(tokenstr);}
    throw new Error("Missing return statement in function");
  }

/* Type */
  final public Type Type() throws ParseException {
 Type t; Id i;
    if (jj_2_2(2)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                                            t = new IntArrayType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
                  t = new IntType();
        break;
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
                      t = new BoolType();
        break;
      case MAIN:
      case IDENTIFIER:
        i = Id();
                 t = new IdType(i);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Block Block() throws ParseException {
  Stmt s; ArrayList<Stmt> stmts;
    stmts = Stmts();
    {if (true) return new Block(stmts);}
    throw new Error("Missing return statement in function");
  }

/* Statement */
  final public Stmt Stmt() throws ParseException {
  Stmt s; int line = 0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      s = Block();
      jj_consume_token(RBRACE);
      break;
    case IF:
    Expr boolExpr; Stmt ifStmt, elseStmt = null;
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      boolExpr = Expr();
      jj_consume_token(RPAREN);
      ifStmt = Stmt();
      if (jj_2_3(2)) {
        jj_consume_token(ELSE);
        elseStmt = Stmt();
      } else {
        ;
      }
          if(elseStmt != null)
          {
            s = new IfElse(new If(boolExpr, ifStmt), elseStmt);
          } else {
            s = new If(boolExpr, ifStmt);
          }
      break;
    case WHILE:
          Expr boolExp;
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      boolExp = Expr();
      jj_consume_token(RPAREN);
      s = Stmt();
          s = new While(boolExp, s);
      break;
    case PRINT:
    Expr printExpr;
      jj_consume_token(PRINT);
                    line = token.beginLine;
      jj_consume_token(LPAREN);
      printExpr = Expr();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
                s = new Print(printExpr);
      break;
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_4(2)) {
         Id id; Expr assignExpr;
        id = Id();
        jj_consume_token(ASSIGN);
                              line = token.beginLine;
        assignExpr = Expr();
        jj_consume_token(SEMICOLON);
                s = new Assign(id, assignExpr);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MAIN:
        case IDENTIFIER:
         Id id; Expr index, assignExpr;
          id = Id();
          jj_consume_token(LBRACKET);
          index = Expr();
          jj_consume_token(RBRACKET);
          jj_consume_token(ASSIGN);
          assignExpr = Expr();
          jj_consume_token(SEMICOLON);
                s = new AssignIndexedElement(id, index, assignExpr);
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
          s.line = line; {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

/*********************** 
 * Expressions with || *
 ***********************/
  final public Expr Expr() throws ParseException {
  Expr e; Expr eprim;
    e = A();
          e.line = token.beginLine;
    eprim = Exprprim(e);
    {if (true) return eprim != null ? eprim: e;}
    throw new Error("Missing return statement in function");
  }

  final public Expr Exprprim(Expr left) throws ParseException {
  Expr right, eprim;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      right = A();
      eprim = Exprprim(right);
                                             {if (true) return new OrExpr(left, eprim == null ? right : eprim);}
      break;
    default:
      jj_la1[10] = jj_gen;
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

/***********************
 * Expressions with && *
 ***********************/
  final public Expr A() throws ParseException {
  Expr e, eprim;
    e = B();
          e.line = token.beginLine;
    eprim = Aprim(e);
    {if (true) return eprim != null ? eprim: e;}
    throw new Error("Missing return statement in function");
  }

  final public Expr Aprim(Expr left) throws ParseException {
  Expr right, eprim;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      right = B();
      eprim = Aprim(right);
                                            {if (true) return new AndExpr(left, eprim == null ? right : eprim);}
      break;
    default:
      jj_la1[11] = jj_gen;
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

/******************************
 * Expressions with == and != *
 ******************************/
  final public Expr B() throws ParseException {
  Expr e, eprim;
    e = C();
          e.line = token.beginLine;
    eprim = Bprim(e);
    {if (true) return eprim != null ? eprim: e;}
    throw new Error("Missing return statement in function");
  }

  final public Expr Bprim(Expr left) throws ParseException {
  Expr right, eprim;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
      jj_consume_token(EQ);
      right = C();
      eprim = Bprim(right);
                                        {if (true) return new EqExpr(left, eprim == null ? right : eprim);}
      break;
    case NEQ:
      jj_consume_token(NEQ);
      right = C();
      eprim = Bprim(right);
                                         {if (true) return new NeqExpr(left, eprim == null ? right : eprim);}
      break;
    default:
      jj_la1[12] = jj_gen;
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

/************************************
 * Expressions with >, >=, < and <= *
 ************************************/
  final public Expr C() throws ParseException {
  Expr e, eprim;
    e = D();
          e.line = token.beginLine;
    eprim = Cprim(e);
    {if (true) return eprim != null ? eprim: e;}
    throw new Error("Missing return statement in function");
  }

  final public Expr Cprim(Expr left) throws ParseException {
  Expr right, eprim;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LT:
      jj_consume_token(LT);
      right = D();
      eprim = Cprim(right);
                                        {if (true) return new LessExpr(left, eprim == null ? right : eprim);}
      break;
    case LEQ:
      jj_consume_token(LEQ);
      right = D();
      eprim = Cprim(right);
                                         {if (true) return new LeqExpr(left, eprim == null ? right : eprim);}
      break;
    case GT:
      jj_consume_token(GT);
      right = D();
      eprim = Cprim(right);
                                        {if (true) return new GreaterExpr(left, eprim == null ? right : eprim);}
      break;
    case GEQ:
      jj_consume_token(GEQ);
      right = D();
      eprim = Cprim(right);
                                         {if (true) return new GeqExpr(left, eprim == null ? right : eprim);}
      break;
    default:
      jj_la1[13] = jj_gen;
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

/****************************
 * Expressions with + and - *
 ****************************/
  final public Expr D() throws ParseException {
  Expr e, eprim;
    e = E();
          e.line = token.beginLine;
    eprim = Dprim(e);
    {if (true) return eprim != null ? eprim: e;}
    throw new Error("Missing return statement in function");
  }
